Update: Updated structure of wafer size capacitance values
1. Nested each respective device (D1, D2, D3, D4, D5, etc.) in a dict of the `device size` key

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "device_dimensions": ["R50,R100,R200,S50,S100,S200"],
+  "device_dimensions": ["R50", "R100", "R200", "S50", "S100", "S200"],
   "index_to_read": {
     "rows": [27, 37],
     "cols": [2]
