--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "device_dimensions": ["R50", "R100", "R200", "S50", "S100", "S200"],
+  "measure_times": 10,
   "index_to_read": {
     "rows": [27, 37],
     "cols": [2]
