--- a/config.json
+++ b/config.json
@@ -14,12 +14,12 @@
   "endurance_test": {
     "files_to_read": ["endurance_test_data_PV.txt"],
     "PV": {
-      "rows_to_read": 2001,
+      "rows_to_read": "42:2042",
       "row_margin_buffer": 3,
       "number_of_cycles_after_initial": 11
     },
     "IV": {
-      "data_rows_to_read": 501,
+      "data_rows_to_read": "42:542",
       "data_row_margin": 3,
       "number_of_cycles_after_initial": 11
     }
