--- a/config.json
+++ b/config.json
@@ -16,9 +16,11 @@
     "path_to_folder_to_transfer_txt_to_excel": "./Endurance/test_data",
 
     "files_to_format": {
-      "./Endurance/test_results/D1_results.xlsx": [
+      "D1_results.xlsx": [
         {
           "file_path_to_read": "./Endurance/test_data/D1_initial_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
@@ -28,6 +30,8 @@
         },
         {
           "file_path_to_read": "./Endurance/test_data/D1_2k_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
@@ -37,6 +41,8 @@
         },
         {
           "file_path_to_read": "./Endurance/test_data/D1_6k_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
@@ -46,6 +52,8 @@
         },
         {
           "file_path_to_read": "./Endurance/test_data/D1_14k_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
@@ -55,6 +63,8 @@
         },
         {
           "file_path_to_read": "./Endurance/test_data/D1_30k_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
@@ -64,6 +74,8 @@
         },
         {
           "file_path_to_read": "./Endurance/test_data/D1_62k_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
@@ -73,6 +85,8 @@
         },
         {
           "file_path_to_read": "./Endurance/test_data/D1_126k_IV.txt",
+          "folder_directory_to_transfer": "./Endurance/test_transfer",
+          "folder_path_to_write": "./Endurance/test_results",
           "rows_to_read": "C:D",
           "start_row": 42,
           "number_of_cycles": 1,
